@@ -1,4 +1,4 @@
 [buildout]
 extends =
-    test-plone-4.2.x.cfg
+    test-plone-5.1.x.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
