@@ -1,7 +1,7 @@
 from ftw.dashboard.portlets.favourites.testing import FAVOURITES_PLONE_LAYER
 from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID
-from unittest2 import TestCase
+from unittest import TestCase
 from zope.event import notify
 from zope.traversing.interfaces import BeforeTraverseEvent
 import transaction
