@@ -1,0 +1,8 @@
+[buildout]
+extends =
+    https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-5.1.x.cfg
+
+package-name = ftw.dashboard.portlets.favourites
+
+[versions]
+ftw.testing = 1.20.1
